--- a/color-clock/package.json
+++ b/color-clock/package.json
@@ -4,11 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo 'Hello World!'"
   },
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "moment": "^2.24.0"
-  }
+  "license": "ISC"
 }
